--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,9 +6,9 @@ name: WakaTime status update
 on:
   push:
     branches: [main]
-  schedule:
+  #schedule:
     # Runs at 12 am  '0 0 * * *'  UTC
-    - cron: "1 * * * *"
+    #- cron: "1 * * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
